<resources>
    <string name="app_name">Yauheniya_Padbiarozskaya_sr_14_00</string>
    <string name="division">÷</string>
    <string name="multiplication">×</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="floatNum">.</string>
    <string name="clear">C</string>
    <string name="equals">=</string>
    <string name="display">0</string>
    <string name="sqrt">√</string>
    <string name="percent">%</string>
</resources>