<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0,1,2,3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5">

            <TextView
                android:id="@+id/textOnDisplay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="start"
                android:gravity="bottom|end"
                android:text="@string/display"
                android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                android:textSize="48sp" />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button8"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="8"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button9"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonDiv"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:text="@string/division"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="6"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button5"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="5"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button6"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="4"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonMult"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:padding="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="0dp"
                android:paddingBottom="0dp"
                android:text="@string/multiplication"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button2"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonMinus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonClear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/clear"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/button0"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonDot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/floatNum"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000" />

            <Button
                android:id="@+id/buttonPlus"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black">

            <Button
                android:id="@+id/buttonPercent"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-8dp"
                android:layout_marginLeft="-8dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginRight="-4dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:padding="-8dp"
                android:paddingLeft="-8dp"
                android:paddingTop="-8dp"
                android:paddingRight="-8dp"
                android:paddingBottom="-8dp"
                android:text="@string/percent"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />

            <Button
                android:id="@+id/ButtonSqrt"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-4dp"
                android:layout_marginLeft="-4dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="1"
                android:text="@string/sqrt"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#000000"
                app:backgroundTint="#1A6E6E6E" />

            <Button
                android:id="@+id/buttonEquals"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="-8dp"
                android:layout_marginStart="-2dp"
                android:layout_marginLeft="-2dp"
                android:layout_marginTop="-8dp"
                android:layout_marginEnd="-8dp"
                android:layout_marginRight="-8dp"
                android:layout_marginBottom="-8dp"
                android:layout_weight="3"
                android:text="@string/equals"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="#FFFFFF"
                app:backgroundTint="#BF00D4B4" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>